# TwoNote

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/assets/: icon_gen.py
src/canvas/: State.cpp  State.h  TCanvas.cpp  TCanvas.h  TPage.cpp  TPage.h  TView.cpp  TView.h
src/canvas/items/: ResizeUndoCommand.cpp  ResizeUndoCommand.h  TLineItem.cpp  TLineItem.h  TPixmapItem.cpp  TPixmapItem.h  TRubberBandItem.cpp  TRubberBandItem.h  TransformUndoCommand.cpp  TransformUndoCommand.h
src/gui/: ScratchScene.cpp  ScratchScene.h  TCanvas.cpp  TCanvas.h  TLineItem.cpp  TLineItem.h  TPage.cpp  TPage.h  TPageItem.cpp  TPageItem.h  TPixmapItem.h  TToolBar.cpp  TToolBar.h  TView.cpp  TView.h  drawboardwidget.cpp  drawboardwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: Configs.cpp  Configs.h  LineShape.cpp  LineShape.h
